--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -12,7 +12,7 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary: #ff0800;
+$primary: rgb(255, 2, 11);
 $secondary: rgb(252, 89, 14);
 $accent: #9c27b0;
 
